# NetSocket

./: .gitignore  CMakeLists.txt
src/: FAIL.hpp  main.cpp
src/net/: SocketEnv.hpp  WebServer.cpp  WebServer.hpp
src/net/windows/: WinSocketEnv.cpp
src/platform/linux/: ClientSocket.hpp  ServerSocket.hpp
src/platform/windows/: ClientSocket.hpp  ServerSocket.hpp  WinSocketEnv.hpp
